changed access to one of project links

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                         <td><a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank">ClickHere</a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://finalprojectop.ca" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></td>
+                        <td><a href="https://theoriginalperson.github.io/Innovate-1Z03-Final-Project/" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://theoriginalperson.github.io/Innovate-1Z03-Final-Project/clipart1198344.png" alt="finalprojectop"></a></td>
                         <td><br>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
-                        <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
+                        <td><a class="projectLink2" href="https://theoriginalperson.github.io/Innovate-1Z03-Final-Project/" target="_blank">ClickHere</a></td>
                     </tr>
                     <tr>
                         <td><a href="https://theoriginalperson.github.io/Improving-Economic-Hardship-via-Artificial-Intelligence/" target="_blank"><img style="height: 70px; border-radius: 50%; background-color: white;" src="https://img.icons8.com/nolan/64/gear.png"></a></td>
